--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next": "12.1.6",
     "pdf-lib": "^1.17.1",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "zustand": "^4.0.0-rc.1"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.2",
